--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 # Replace the text below to customize your site
-site_name: Nombre Estudiante - UTEC & Fab Lab Barcelona
-site_description: Master in Design for Emergent Futures
-site_author: Nombre Estudiante
-copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
+site_name: Mateo Olivera - UTEC & Fab Lab Barcelona
+site_description: Especialización en Fabricación Digital e Innovación 
+site_author: Mateo Olivera
+copyright: Copyleft 2024 "Mateo Olivera" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
 site_url: https://fablabbcn.github.io/efdi-template/
 repo_url: https://github.com/fablabbcn/efdi-template
