--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ theme:
     code: Cutive Mono
   icon:
     logo: material/memory
-  favicon: images/favicon.svg
+  favicon: images/LOGO.svg
   features:
     - instant
     - navigation.expand
