--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,9 +3,9 @@ site_name: Mateo Olivera - UTEC & Fab Lab Barcelona
 site_description: Especialización en Fabricación Digital e Innovación 
 site_author: Mateo Olivera
 copyright: Copyleft 2024 "Mateo Olivera" - GNU Free Documentation License
-repo_name: 'Name : Github Repo'
-site_url: https://fablabbcn.github.io/efdi-template/
-repo_url: https://github.com/fablabbcn/efdi-template
+repo_name: 'Mateo Olivera : Github Repo'
+site_url: https://wwwteo.github.io/mateo_olivera/about/me/
+repo_url: https://github.com/wwwteo/mateo_olivera/
 
 
 nav:
