--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 # Replace the text below to customize your site
 site_name: Nombre Estudiante - UTEC & Fab Lab Barcelona
 site_description: Master in Design for Emergent Futures
-site_author: Nombre Estudiante
+site_author: PilarGO
 copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
-site_url: https://fablabbcn.github.io/efdi-template/
-repo_url: https://github.com/fablabbcn/efdi-template
+site_url: https://fablabbcn.github.io/PilarGO/
+repo_url: https://github.com/fablabbcn/PilarGO
 
 
 nav:
