--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_description: Master in Design for Emergent Futures
 site_author: PilarGO
 copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
-site_url: https://fablabbcn.github.io/PilarGO/
-repo_url: https://github.com/fablabbcn/PilarGO
+site_url: https://PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
+repo_url: https://github.com/PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 
 
 nav:
