--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 # Replace the text below to customize your site
-site_name: Nombre Estudiante - UTEC & Fab Lab Barcelona
-site_description: Master in Design for Emergent Futures
+site_name: Pilar Garcia Olano - UTEC & Fab Lab Barcelona
+site_description: Especializacion en Fabricacion Digital e Innovacion
 site_author: PilarGO
-copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
-repo_name: 'Name : Github Repo'
+copyright: Copyleft 2024 "PilarGO" - GNU Free Documentation License
+repo_name: 'Name : PilarGO'
 site_url: https://PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 repo_url: https://github.com/PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 
