--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@
 site_name: Pilar Garcia Olano - UTEC & Fab Lab Barcelona
 site_description: Especializacion en Fabricacion Digital e Innovacion
 site_author: PilarGO
-copyright: Copyleft 2024 "PilarGO" - GNU Free Documentation License
-repo_name: 'Name : PilarGO'
+copyright: Copyleft 2024 "Pilar-Garcia-Olano-EFDI-UTEC-2024" - GNU Free Documentation License
+repo_name: 'Name : Pilar-Garcia-Olano-EFDI-UTEC-2024'
 site_url: https://PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 repo_url: https://github.com/PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 
