--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_description: Especializacion en Fabricacion Digital e Innovacion
 site_author: PilarGO
 copyright: Copyleft 2024 "Pilar-Garcia-Olano-EFDI-UTEC-2024" - GNU Free Documentation License
 repo_name: 'Name : Pilar-Garcia-Olano-EFDI-UTEC-2024'
-site_url: https://PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
+site_url: https://PilarGO.github.io/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 repo_url: https://github.com/PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
 
 
