--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,10 @@
 site_name: Pilar Garcia Olano - UTEC & Fab Lab Barcelona
 site_description: Especializacion en Fabricacion Digital e Innovacion
 site_author: PilarGO
-copyright: Copyleft 2024 "Pilar-Garcia-Olano-EFDI-UTEC-2024" - GNU Free Documentation License
-repo_name: 'Name : Pilar-Garcia-Olano-EFDI-UTEC-2024'
-site_url: https://PilarGO.github.io/Pilar-Garcia-Olano-EFDI-UTEC-2024/
-repo_url: https://github.com/PilarGO/Pilar-Garcia-Olano-EFDI-UTEC-2024/
+copyright: Copyleft 2024 "PilarGO_EFDI_2024" - GNU Free Documentation License
+repo_name: 'Name : PilarGO_EFDI_2024'
+site_url: https://PilarGO.github.io/PilarGO_EFDI_2024/
+repo_url: https://github.com/PilarGO/PilarGO_EFDI_2024/
 
 
 nav:
